--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,7 @@
 .DS_Store
 WEBase
 
+*.pyc
+
 zServer/rcssserver-15.3.0/src/coach_lang_parser.hpp
 zServer/rcssserver-15.3.0/src/player_command_parser.hpp
